# mcp-observatory

./: .gitignore  .npmrc  README.md  package-lock.json  package.json  pyproject.toml  tsconfig.json
.github/: DEPLOYMENT.md  NPM_SETUP.md
.github/workflows/: deploy.yaml  publish.yml  test.yml
examples/: openai_prompt_to_mcp_invocation.py  prompt_to_mcp_invocation_mvp.py  real_world_mcp_client.py  real_world_mcp_server.py  simple_mcp_server.py
mcp_observatory/: __init__.py  instrument.py
mcp_observatory/core/: __init__.py  context.py  interceptor.py  metrics.py  tracer.py  wrapper_api.py
mcp_observatory/cost/: __init__.py  pricing.py  tokenizer.py
mcp_observatory/demo/: __init__.py  real_world_client.py  real_world_server.py  run_demo.py  server.py
mcp_observatory/execution/: __init__.py  policy.py
mcp_observatory/exporters/: __init__.py  base.py  postgres.py
mcp_observatory/fallback/: __init__.py  router.py  templates.py
mcp_observatory/hallucination/: __init__.py  config.py  scoring.py  signals.py
mcp_observatory/policy/: __init__.py  engine.py  registry.py  types.py
mcp_observatory/proposal_commit/: __init__.py  hashing.py  proposer.py  scoring.py  storage.py  token.py  verifier.py
mcp_observatory/risk/: __init__.py  scoring.py  signals.py  vector.py
schema/: postgres.sql
scripts/: test.mjs
sql/: schema.sql
src/: index.ts
tests/: test_prompt_invocation_mvp.py  test_proposal_commit.py  test_real_world_mcp_client.py  test_real_world_mcp_server.py  test_tiered_execution_policy.py  test_v2_control_plane.py  test_wrapper_api.py
(+31 files in other folders)
