[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-observatory"
version = "0.1.0"
description = "Observability and APM toolkit for MCP servers"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [
  { name = "MCP Observatory Contributors" }
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Software Development :: Libraries",
]
dependencies = [
  "asyncpg>=0.29.0",
]

[project.optional-dependencies]
openai = [
  "openai>=1.40.0",
]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.5.0",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["mcp_observatory*"]
